--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "glob": "^7.1.2",
     "mongoose": "^5.2.4"
   }
 }
