--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,13 @@ events {
 http {
     server {
         listen 80;
+
+        listen 443 ssl;
+
         server_name localhost;
+
+        ssl_certificate /etc/nginx/ssl/nginx.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx.key;
         
         location / {
             proxy_pass http://nodeapp:3000;
